--- a/KidPuzzle_harmattan.desktop
+++ b/KidPuzzle_harmattan.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Name=KidPuzzle
+Name=Puzzle
 Exec=/usr/bin/invoker --type=d -s /opt/KidPuzzle/bin/KidPuzzle
 Icon=/usr/share/icons/hicolor/80x80/apps/KidPuzzle80.png
 X-Window-Icon=
